--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </div>
 
     <div id="main-content">
-        <a href="serverPage.html" target="_blank"> <span>1</span>سورة الفاتحة</a>
-        <a href="serverPage.html" target="_blank"><span>2</span>سورة البقرة</a>
-        <a href="serverPage.html" target="_blank"><span>3</span>سورة آل عمران</a>
-        <a href="serverPage.html" target="_blank"><span>4</span>سورة النساء</a>
+        <a href="#" target="_blank"> <span>1</span>سورة الفاتحة</a>
+        <a href="#" target="_blank"><span>2</span>سورة البقرة</a>
+        <a href="#" target="_blank"><span>3</span>سورة آل عمران</a>
+        <a href="#" target="_blank"><span>4</span>سورة النساء</a>
     </div>
 
 </body>
